removing overflow:hidden on dashboard portlets to avoid tooltips being hidden

--- a/Client/wwwroot/css/app.scss
+++ b/Client/wwwroot/css/app.scss
@@ -384,7 +384,6 @@ input[type=file]{
         height:calc(100% - 2rem);
         padding-left: 0.25rem;
         width: calc(100% - 0.25rem);
-        overflow: hidden;
     }
 
     &.chart-TreeMap .content{
